[gd_scene load_steps=25 format=3 uid="uid://crji0cn0lkyye"]

[ext_resource type="Script" path="res://scripts/summoning.gd" id="1_i7tbs"]
[ext_resource type="Texture2D" uid="uid://dh7wyg03t81c" path="res://assets/player/outline.png" id="3_i104o"]
[ext_resource type="Texture2D" uid="uid://cxe1mwg0875vr" path="res://assets/effects/summoning/eagle/Projectile 2 wo blur.png" id="3_q2o1x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_u32lq"]
atlas = ExtResource("3_q2o1x")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl7qx"]
atlas = ExtResource("3_q2o1x")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5m5s"]
atlas = ExtResource("3_q2o1x")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljdbr"]
atlas = ExtResource("3_q2o1x")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3e8c"]
atlas = ExtResource("3_q2o1x")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4g2i"]
atlas = ExtResource("3_q2o1x")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnhfc"]
atlas = ExtResource("3_q2o1x")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouovn"]
atlas = ExtResource("3_q2o1x")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vvts"]
atlas = ExtResource("3_q2o1x")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yobs8"]
atlas = ExtResource("3_q2o1x")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gnj5h"]
atlas = ExtResource("3_q2o1x")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qfm3"]
atlas = ExtResource("3_q2o1x")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hmrl"]
atlas = ExtResource("3_q2o1x")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7povf"]
atlas = ExtResource("3_q2o1x")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk1xo"]
atlas = ExtResource("3_q2o1x")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3llma"]
atlas = ExtResource("3_q2o1x")
region = Rect2(720, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_ecqu4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u32lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl7qx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5m5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljdbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3e8c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4g2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnhfc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouovn")
}],
"loop": false,
"name": &"enterance",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vvts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yobs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gnj5h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6qfm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hmrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7povf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk1xo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3llma")
}],
"loop": true,
"name": &"loop",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w22uo"]
size = Vector2(8, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_4syoj"]
radius = 128.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r34f6"]
size = Vector2(39, 20)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_el0ax"]

[node name="Summoning" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_i7tbs")

[node name="OutlineCircle" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 1)
texture = ExtResource("3_i104o")

[node name="Animation" type="AnimatedSprite2D" parent="."]
z_index = 2
z_as_relative = false
sprite_frames = SubResource("SpriteFrames_ecqu4")
animation = &"loop"

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_w22uo")
disabled = true

[node name="AttackRadius" type="Area2D" parent="."]
collision_mask = 7

[node name="Collision" type="CollisionShape2D" parent="AttackRadius"]
shape = SubResource("CircleShape2D_4syoj")

[node name="HitBox" type="Area2D" parent="."]
collision_mask = 3

[node name="Collision" type="CollisionShape2D" parent="HitBox"]
position = Vector2(2.5, 0)
shape = SubResource("RectangleShape2D_r34f6")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="AttackTimer" type="Timer" parent="."]
autostart = true

[node name="Thunder" type="Line2D" parent="."]
material = SubResource("ShaderMaterial_el0ax")
points = PackedVector2Array(0, 0, 0, 0)

[node name="Label" type="Label" parent="."]
offset_left = -11.0
offset_top = -32.0
offset_right = 29.0
offset_bottom = -6.0
text = "HP"

[connection signal="body_entered" from="AttackRadius" to="." method="_on_attack_radius_body_entered"]
[connection signal="body_exited" from="AttackRadius" to="." method="_on_attack_radius_body_exited"]
[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
